--- a/staging/operator-lifecycle-manager/manifests/0000_50_olm_05-subscription.crd.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_50_olm_05-subscription.crd.yaml
@@ -1702,6 +1702,10 @@ spec:
             currentCSV:
               description: CurrentCSV is the CSV the Subscription is progressing to.
               type: string
+            installPlanGeneration:
+              description: InstallPlanGeneration is the current generation of the
+                installplan
+              type: integer
             installPlanRef:
               description: InstallPlanRef is a reference to the latest InstallPlan
                 that contains the Subscription's current CSV.
@@ -1776,3 +1780,4 @@ spec:
             state:
               description: State represents the current state of the Subscription
               type: string
+
