chore(codegen): use controller-gen for deepcopy
Use controller-gen instead of k8s.io/code-generator to generate
deepcopy.

Note: Deepcopy generation should be left to the operator-framework/api
repo at once we start strictly importing API type defs from there.

Upstream-repository: operator-lifecycle-manager
Upstream-commit: de86ddc3119516eb15460591d630afa0028eb928

--- a/staging/operator-lifecycle-manager/Makefile
+++ b/staging/operator-lifecycle-manager/Makefile
@@ -160,8 +160,11 @@ manifests: vendor
 
 	$(YQ_INTERNAL) w --inplace deploy/chart/crds/0000_50_olm_03-clusterserviceversion.crd.yaml spec.validation.openAPIV3Schema.properties.spec.properties.install.properties.spec.properties.deployments.items.properties.spec.properties.template.properties.metadata.x-kubernetes-preserve-unknown-fields true
 
-# Generate clients, listers, and informers
+# Generate deepcopy, conversion, clients, listers, and informers
 codegen:
+	# Deepcopy
+	$(CONTROLLER_GEN) object:headerFile=./boilerplate.go.txt paths=./pkg/api/apis/operators/...i
+	# Conversion, clients, listers, and informers
 	$(CODEGEN)
 
 # Generate mock types.
