feat(crds): add unmarshaled convenience getters
Add convenience getters that lazily unmarshal and memoize each of the latest CRDs.

Upstream-repository: api
Upstream-commit: 41349c029f3a11fc245124001c7a56c94f2b1a29

--- a/staging/api/Makefile
+++ b/staging/api/Makefile
@@ -8,13 +8,6 @@ ifeq ($(BUILD_VERBOSE),1)
 else
   Q = @
 endif
- 
-# Get the currently used golang install path (in GOPATH/bin, unless GOBIN is set)
-ifeq (,$(shell go env GOBIN))
-GOBIN=$(shell go env GOPATH)/bin
-else
-GOBIN=$(shell go env GOBIN)
-endif
 
 REPO = github.com/operator-framework/api
 BUILD_PATH = $(REPO)/cmd/operator-verify
@@ -70,66 +63,8 @@ manifests: controller-gen ## Generate manifests e.g. CRD, RBAC etc
 	@# Preserve unknown fields on the CSV spec (prevents install strategy from being pruned)
 	$(YQ_INTERNAL) w --inplace ./crds/operators.coreos.com_clusterserviceversions.yaml spec.validation.openAPIV3Schema.properties.spec.properties.install.properties.spec.properties.deployments.items.properties.spec.properties.template.properties.metadata.x-kubernetes-preserve-unknown-fields true
 
-# Generate deepcopy, conversion, clients, listers, and informers
-codegen:
-	# Deepcopy
-	$(CONTROLLER_GEN) object:headerFile=./boilerplate.go.txt paths=./pkg/api/apis/operators/...i
-	# Conversion, clients, listers, and informers
-	$(CODEGEN)
-
-# Generate mock types.
-mockgen:
-	$(MOCKGEN)
-
-# Generates everything.
-gen-all: codegen mockgen manifests
-
-diff:
-	git diff --exit-code
-
-verify-codegen: codegen diff
-verify-mockgen: mockgen diff
-verify-manifests: manifests diff
-verify: verify-codegen verify-mockgen verify-manifests
-
-
-# before running release, bump the version in OLM_VERSION and push to master,
-# then tag those builds in quay with the version in OLM_VERSION
-release: ver=$(shell cat OLM_VERSION)
-release:
-	docker pull quay.io/operator-framework/olm:$(ver)
-	$(MAKE) target=upstream ver=$(ver) quickstart=true package
-	$(MAKE) target=ocp ver=$(ver) package
-	rm -rf manifests
-	mkdir manifests
-	cp -R deploy/ocp/manifests/$(ver)/. manifests
-	# requires gnu sed if on mac
-	find ./manifests -type f -exec sed -i "/^#/d" {} \;
-	find ./manifests -type f -exec sed -i "1{/---/d}" {} \;
-
-verify-release: release diff
-
-package: olmref=$(shell docker inspect --format='{{index .RepoDigests 0}}' quay.io/operator-framework/olm:$(ver))
-package:
-ifndef target
-	$(error target is undefined)
-endif
-ifndef ver
-	$(error ver is undefined)
-endif
-	$(YQ_INTERNAL) w -i deploy/$(target)/values.yaml olm.image.ref $(olmref)
-	$(YQ_INTERNAL) w -i deploy/$(target)/values.yaml catalog.image.ref $(olmref)
-	$(YQ_INTERNAL) w -i deploy/$(target)/values.yaml package.image.ref $(olmref)
-	./scripts/package_release.sh $(ver) deploy/$(target)/manifests/$(ver) deploy/$(target)/values.yaml
-	ln -sfFn ./$(ver) deploy/$(target)/manifests/latest
-ifeq ($(quickstart), true)
-	./scripts/package_quickstart.sh deploy/$(target)/manifests/$(ver) deploy/$(target)/quickstart/olm.yaml deploy/$(target)/quickstart/crds.yaml deploy/$(target)/quickstart/install.sh
-endif
-
-.PHONY: run-console-local
-run-console-local:
-	@echo Running script to run the OLM console locally:
-	. ./scripts/run_console_local.sh
+	@# Update embedded CRD files.
+	@go generate ./crds/...
 
 # Static tests.
 .PHONY: test test-unit
