--- a/staging/api/crds/operators.coreos.com_clusterserviceversions.yaml
+++ b/staging/api/crds/operators.coreos.com_clusterserviceversions.yaml
@@ -8704,6 +8704,10 @@ spec:
                     containerPort:
                       type: integer
                       format: int32
+                    conversionCRDs:
+                      type: array
+                      items:
+                        type: string
                     deploymentName:
                       type: string
                     failurePolicy:
