--- a/pkg/manifests/csv.yaml
+++ b/pkg/manifests/csv.yaml
@@ -7,6 +7,10 @@ metadata:
   labels:
     olm.version: 0.18.3
     olm.clusteroperator.name: operator-lifecycle-manager-packageserver
+  annotations:
+    include.release.openshift.io/single-node-developer: true
+    include.release.openshift.io/self-managed-high-availability: true
+    include.release.openshift.io/ibm-cloud-managed: true
 spec:
   displayName: Package Server
   description: Represents an Operator package that is available from a given CatalogSource which will resolve to a ClusterServiceVersion.
@@ -83,6 +87,7 @@ spec:
                   app: packageserver
                 annotations:
                   target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
+                creationTimestamp: null
               spec:
                 serviceAccountName: olm-operator-serviceaccount
                 nodeSelector:
@@ -113,6 +118,7 @@ spec:
                     imagePullPolicy: IfNotPresent
                     ports:
                       - containerPort: 5443
+                        protocol: TCP
                     livenessProbe:
                       httpGet:
                         scheme: HTTPS
@@ -147,3 +153,6 @@ spec:
         description: A PackageManifest is a resource generated from existing CatalogSources and their ConfigMaps
         deploymentName: packageserver
         containerPort: 5443
+  cleanup:
+    enabled: false
+  customresourcedefinitions: {}
