--- a/scripts/packageserver-deployment.patch.yaml
+++ b/scripts/packageserver-deployment.patch.yaml
@@ -4,3 +4,21 @@
 - command: update
   path: spec.install.spec.deployments[0].spec.template.spec.priorityClassName
   value: system-cluster-critical
+- command: update
+  path: spec.cleanup.enabled
+  value: false
+- command: update
+  path: spec.customresourcedefinitions
+  value: {}
+- command: update
+  path: spec.install.spec.deployments[0].spec.template.spec.containers[0].ports[0].protocol
+  value: TCP
+- command: update
+  path: spec.install.spec.deployments[0].spec.template.metadata.creationTimestamp
+  value: null
+- command: update
+  path: metadata.annotations
+  value:
+    include.release.openshift.io/single-node-developer: true
+    include.release.openshift.io/self-managed-high-availability: true
+    include.release.openshift.io/ibm-cloud-managed: true
