--- a/pkg/manifests/csv.yaml
+++ b/pkg/manifests/csv.yaml
@@ -8,9 +8,9 @@ metadata:
     olm.version: 0.18.3
     olm.clusteroperator.name: operator-lifecycle-manager-packageserver
   annotations:
-    include.release.openshift.io/single-node-developer: true
-    include.release.openshift.io/self-managed-high-availability: true
-    include.release.openshift.io/ibm-cloud-managed: true
+    include.release.openshift.io/single-node-developer: "true"
+    include.release.openshift.io/self-managed-high-availability: "true"
+    include.release.openshift.io/ibm-cloud-managed: "true"
 spec:
   displayName: Package Server
   description: Represents an Operator package that is available from a given CatalogSource which will resolve to a ClusterServiceVersion.
