--- a/values.yaml
+++ b/values.yaml
@@ -14,6 +14,7 @@ olm:
     pullPolicy: IfNotPresent
   service:
     internalPort: 8080
+    externalPort: metrics
   nodeSelector:
     kubernetes.io/os: linux
     node-role.kubernetes.io/master: ""
@@ -42,6 +43,7 @@ catalog:
     pullPolicy: IfNotPresent
   service:
     internalPort: 8080
+    externalPort: metrics
   nodeSelector:
     kubernetes.io/os: linux
     node-role.kubernetes.io/master: ""
