--- a/manifests/0000_50_olm_08-catalog-operator.deployment.ibm-cloud-managed.yaml
+++ b/manifests/0000_50_olm_08-catalog-operator.deployment.ibm-cloud-managed.yaml
@@ -22,8 +22,22 @@ spec:
         target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
     spec:
       serviceAccountName: olm-operator-serviceaccount
+      volumes:
+        - name: srv-cert
+          secret:
+            secretName: catalog-operator-serving-cert
+        - name: profile-collector-cert
+          secret:
+            secretName: catalog-operator-serving-cert
       containers:
         - name: catalog-operator
+          volumeMounts:
+            - name: srv-cert
+              mountPath: "/srv-cert"
+              readOnly: true
+            - name: profile-collector-cert
+              mountPath: "/profile-collector-cert"
+              readOnly: true
           command:
             - /bin/catalog
           args:
@@ -34,25 +48,26 @@ spec:
             - quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
             - -writeStatusName
             - operator-lifecycle-manager-catalog
-            - -tls-cert
-            - /var/run/secrets/serving-cert/tls.crt
-            - -tls-key
-            - /var/run/secrets/serving-cert/tls.key
+            - --tls-cert
+            - /srv-cert/tls.crt
+            - --tls-key
+            - /srv-cert/tls.key
+            - --client-ca
+            - /profile-collector-cert/tls.crt
           image: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 8080
-            - containerPort: 8081
-              name: metrics
-              protocol: TCP
+            - containerPort: 8443
           livenessProbe:
             httpGet:
               path: /healthz
-              port: 8080
+              port: 8443
+              scheme: HTTPS
           readinessProbe:
             httpGet:
               path: /healthz
-              port: 8080
+              port: 8443
+              scheme: HTTPS
           terminationMessagePolicy: FallbackToLogsOnError
           resources:
             requests:
@@ -61,9 +76,6 @@ spec:
           env:
             - name: RELEASE_VERSION
               value: "0.0.1-snapshot"
-          volumeMounts:
-            - mountPath: /var/run/secrets/serving-cert
-              name: serving-cert
       nodeSelector:
         kubernetes.io/os: linux
       tolerations:
@@ -79,7 +91,3 @@ spec:
           operator: Exists
           tolerationSeconds: 120
       priorityClassName: system-cluster-critical
-      volumes:
-        - name: serving-cert
-          secret:
-            secretName: catalog-operator-serving-cert
