--- a/manifests/0000_90_olm_01-prometheus-rule.yaml
+++ b/manifests/0000_90_olm_01-prometheus-rule.yaml
@@ -21,6 +21,8 @@ spec:
             severity: warning
             namespace: "{{ $labels.namespace }}"
           annotations:
+            summary: CSV failed for over 2 minutes
+            description: Fires whenever a CSV has been in the failed phase for more than 2 minutes.
             message: Failed to install Operator {{ $labels.name }} version {{ $labels.version }}. Reason-{{ $labels.reason }}
         - alert: CsvAbnormalOver30Min
           expr: csv_abnormal{phase=~"(^Replacing$|^Pending$|^Deleting$|^Unknown$)"}
@@ -29,6 +31,8 @@ spec:
             severity: warning
             namespace: "{{ $labels.namespace }}"
           annotations:
+            summary: CSV abnormal for over 30 minutes
+            description: Fires whenever a CSV is in the Replacing, Pending, Deleting, or Unkown phase for more than 30 minutes.
             message: Failed to install Operator {{ $labels.name }} version {{ $labels.version }}. Phase-{{ $labels.phase }} Reason-{{ $labels.reason }}
     - name: olm.installplan.rules
       rules:
@@ -37,4 +41,6 @@ spec:
           labels:
             severity: warning
           annotations:
+            summary: API returned a warning when modifying an operator
+            description: Fires whenever the API server returns a warning when attempting to modify an operator.
             message: The API server returned a warning during installation or upgrade of an operator. An Event with reason "AppliedWithWarnings" has been created with complete details, including a reference to the InstallPlan step that generated the warning.
