--- a/staging/operator-registry/.github/workflows/goreleaser.yaml
+++ b/staging/operator-registry/.github/workflows/goreleaser.yaml
@@ -47,7 +47,9 @@ jobs:
           UNATTENDED=1 ./build.sh
 
       - name: "Install linux cross-compilers"
-        run: sudo apt-get install -y gcc-aarch64-linux-gnu gcc-s390x-linux-gnu gcc-powerpc64le-linux-gnu gcc-mingw-w64-x86-64
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu gcc-s390x-linux-gnu gcc-powerpc64le-linux-gnu gcc-mingw-w64-x86-64
 
       - name: "Install yq"
         run: |
