Add cluster runtime constraints handling
Signed-off-by: Per G. da Silva <perdasilva@redhat.com>

--- a/manifests/0000_50_olm_08-catalog-operator.deployment.ibm-cloud-managed.yaml
+++ b/manifests/0000_50_olm_08-catalog-operator.deployment.ibm-cloud-managed.yaml
@@ -78,6 +78,8 @@ spec:
           env:
             - name: RELEASE_VERSION
               value: "0.0.1-snapshot"
+            - name: RUNTIME_CONSTRAINTS
+              value: "/opt/olm/runtime_constraints.json"
       nodeSelector:
         kubernetes.io/os: linux
       tolerations:
