--- a/manifests/0000_50_olm_08-catalog-operator.deployment.yaml
+++ b/manifests/0000_50_olm_08-catalog-operator.deployment.yaml
@@ -79,6 +79,8 @@ spec:
           env:
             - name: RELEASE_VERSION
               value: "0.0.1-snapshot"
+            - name: RUNTIME_CONSTRAINTS
+              value: "/opt/olm/runtime_constraints.json"
       nodeSelector:
         kubernetes.io/os: linux
         node-role.kubernetes.io/master: ""
