Add format as a prerequisite to verify target (#200)
This commit updates the verify target to include the
format target as a prerequisite. This commit also
includes changes introduced after running the format
target.

Upstream-repository: api
Upstream-commit: 5678e585045db882c38cd186ace77d99c9fa0902

--- a/staging/api/Makefile
+++ b/staging/api/Makefile
@@ -85,7 +85,7 @@ TEST_PKGS:=$(shell go list ./...)
 test-unit: ## Run the unit tests
 	$(Q)go test -count=1 -short ${TEST_PKGS}
 
-verify: manifests generate
+verify: manifests generate format
 	git diff --exit-code
 
 # Utilities.
