--- a/manifests/0000_50_olm_00-installplans.crd.yaml
+++ b/manifests/0000_50_olm_00-installplans.crd.yaml
@@ -224,6 +224,8 @@ spec:
                       - resource
                       - status
                     properties:
+                      optional:
+                        type: boolean
                       resolving:
                         type: string
                       resource:
