--- a/staging/api/.github/workflows/go.yaml
+++ b/staging/api/.github/workflows/go.yaml
@@ -1,10 +1,10 @@
 name: Go
 on:
   push:
-    branches: 
+    branches:
       - master
   pull_request:
-    branches: 
+    branches:
       - master
 jobs:
   build:
@@ -18,8 +18,17 @@ jobs:
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
     - name: unit-test
-      run: go test -mod=vendor -v ./...
+      run: go test -v ./...
 
   go-apidiff:
     name: go-apidiff
@@ -31,6 +40,8 @@ jobs:
       with:
         go-version: 1.17
       id: go
+    - name: Print out Go env
+      run: go env
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
       with:
