--- a/manifests/0000_50_olm_08-catalog-operator.deployment.yaml
+++ b/manifests/0000_50_olm_08-catalog-operator.deployment.yaml
@@ -41,13 +41,13 @@ spec:
           command:
             - /bin/catalog
           args:
-            - '-namespace'
+            - '--namespace'
             - openshift-marketplace
-            - -configmapServerImage=quay.io/operator-framework/configmap-operator-registry:latest
+            - --configmapServerImage=quay.io/operator-framework/configmap-operator-registry:latest
             - -opmImage=quay.io/operator-framework/configmap-operator-registry:latest
-            - -util-image
+            - --util-image
             - quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
-            - -writeStatusName
+            - --writeStatusName
             - operator-lifecycle-manager-catalog
             - --tls-cert
             - /srv-cert/tls.crt
